--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "emailjs-com": "^2.6.3",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -17,7 +19,7 @@
     "react-ga": "^3.1.2",
     "react-jsx": "^1.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
