--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-gtm-module": "^2.0.11",
     "react-jsx": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4"
