--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookiebot": "^1.0.10",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-gtm-module": "^2.0.11",
@@ -47,5 +48,11 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
+  },
+  "resolve": {
+    "extensions": [
+      ".web.js",
+      ".js"
+    ]
   }
 }
